// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders consistently 1`] = `
.c1 {
  width: 0;
  background-color: #2da44e;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #d0d7de;
  border-radius: 3px;
  height: 8px;
}

<span
  className="c0"
>
  <span
    className="c1"
  />
</span>
`;

exports[`ProgressBar respects the "progress" prop 1`] = `
.c1 {
  width: 80%;
  background-color: #2da44e;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #d0d7de;
  border-radius: 3px;
  height: 8px;
}

<span
  className="c0"
>
  <span
    className="c1"
  />
</span>
`;
